FTP is not working on iOS. app is not useable

--- a/iOS/3DSCANER/Base.lproj/Main.storyboard
+++ b/iOS/3DSCANER/Base.lproj/Main.storyboard
@@ -27,10 +27,17 @@
                                     <action selector="LoadImageTap:" destination="BYZ-38-t0r" eventType="touchDown" id="dOp-lY-IUD"/>
                                 </connections>
                             </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Z7P-3i-1dG">
+                                <rect key="frame" x="0.0" y="146" width="375" height="345"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="imageView" destination="Z7P-3i-1dG" id="Re9-HZ-dHN"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
